# ezdata

./: .env.example  .env.pg  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  SECURITY.md  blueprints.py  celery_app.py  config.py  dev.env  docker-compose.dev.yml  docker-compose.my.yml  docker-compose.pg.yml  docker-compose.yml  init.sh  init_system.py  models.py  rebrand.sh  requirements.txt  supervisord.ini  web_api.py
api/: .dockerignore  .env.dev.example  .env.dockermy  .env.dockermy.example  .env.dockerpg  .env.dockerpg.example  .env.prod  .env.prod.example  Dockerfile  Dockerfile.dev  Dockerfile.my  Dockerfile.pg  README.md  alembic.ini  blueprints.py  celery_app.py  config.py  data_agent_demo.py  demo_seed.py  dev.env  docker-compose.yml  init.sh  init_system.py  install_handlers.py  models.py  pyproject.toml  requirements-data.txt  requirements-pg.txt  requirements-storage.txt  requirements.txt  ruff.toml  sandbox_api.py  sandbox_app.py  scheduler_api.py  server.py  supervisord.ini  web_api.py
api/.claude/: settings.json
api/cli/: bootstrap.py  context.py  main.py  output.py
api/common/: context.py  router.py
api/config/: celery_app.py  database.py  env.py  get_db.py  get_scheduler.py  migrate.py
api/docs/: cli_usage.md  transport_crypto_config.md
api/etl/: __init__.py  etl_task.py  registry.py  requirements.txt
api/etl2/: __init__.py  etl_task.py  registry.py  requirements.txt
ruoyi-fastapi-backend/: .env.dev  .env.dockermy  .env.dockerpg  .env.prod  Dockerfile.dev  Dockerfile.pg  pyproject.toml  requirements-pg.txt  requirements.txt
(+4969 files in other folders)
